# multisig-ops

./: .gitignore  .gitmodules  00combiled-gauge-report-to-BIP-267.txt  BIP-218.json  BIP-XXX-enable-USDC.e-USDT-sDAI-gauge-Gnosis  CLAUDE.md  FAQ.md  README.md  erc20_transfer_payload.py  fetch_summary.json  multisigs.md  package-lock.json  pyproject.toml  upkeeps.csv
tools/python/brownie/: .env.example  Dockerfile  README.md  ape_safe.py  brownie-config.yaml  generate_interface.py  pyproject.toml  requirements-actions.txt  requirements.txt
tools/python/brownie/FeeData/: 2022-2-2.json
tools/python/brownie/contracts/: ChiildChainStreamer.vy  ERC20perodicEmissionsInjector.sol  GasStationExact.sol  testToken.sol
tools/python/brownie/great_ape_safe/: great_ape_safe.py
tools/python/brownie/great_ape_safe/ape_api/: aave.py  across.py  badger.py  balancer.py  chainlink.py  cow.py  snapshot.py
tools/python/brownie/helpers/: addresses.py  balancerGaugeInfo.py  chainnames.json
tools/python/brownie/interfaces/balancer/: AuthorizerAdapter.sol  IBALTokenHolder.sol  IChildChainStreamer.sol  IRewardsOnlyGauge.sol
tools/python/brownie/interfaces/curve/: ICurveTokenV5.json  IStableSwap2Pool.json  IStableSwap3Pool.json
tools/python/brownie/interfaces/hiddenhand/: IBribeMarket.sol
tools/python/brownie/scripts/: csv_airdrop.py
tools/python/brownie/scripts/balancer_basics/: disable_gauges.py
tools/python/brownie/scripts/balancer_reports/: authorizier_roles.py  get_gauge_mappings.py
tools/python/brownie/tests/: conftest.py  test_periodicEmissionsInjector.py
(+8443 files in other folders)
